--- a/index.html
+++ b/index.html
@@ -58,21 +58,21 @@
 
     <main>
         <section>
-            <h2>मेरी सेवाएँ</h2>
+            <h2>it support</h2>
             <ul>
-                <li>कंप्यूटर और लैपटॉप रिपेयर</li>
-                <li>इंटरनेट कनेक्शन समस्या समाधान</li>
-                <li>इलेक्ट्रॉनिक डिवाइसेस की देखभाल और मरम्मत</li>
-                <li>नेटवर्क सेटअप और मेंटेनेंस</li>
-                <li>सॉफ्टवेयर इंस्टॉलेशन और समस्या निवारण</li>
+                <li>Computer And Laptop Repair</li>
+                <li>Internat Connection Problem Maintenance</li>
+                <li>Electronic Devices Ki Care And Repair</li>
+                <li>Network Setup And Maintenance</li>
+                <li>Software Installation And Problemा  Redressal</li>
             </ul>
         </section>
 
         <section class="contact">
-            <h2>संपर्क करें</h2>
-            <p>मुझे कॉल करें या मैसेज करें:</p>
+            <h2>Contact Us</h2>
+            <p>You can calland message on this number:</p>
             <p><a href="tel:+919759662377" class="phone-link">+91 9759662377</a></p>
-            <p>या ईमेल करें: <a href="mailto:.amitkumar975966@gmail.com">amitkumar975966@gmail.com</a></p>
+            <p>Email us: <a href="mailto:.amitkumar975966@gmail.com">amitkumar975966@gmail.com</a></p>
         </section>
     </main>
 
