--- a/index.html
+++ b/index.html
@@ -1,5 +1,34 @@
 <!DOCTYPE html>
 <html lang="hi">
+    <!DOCTYPE html>
+<html>
+<head>
+  <title>Meri Website</title>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      background-image: url("images/banner.jpg"); /* ← yahan aapka image ka path hoga */
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      height: 100vh;
+    }
+
+    h1 {
+      color: white;
+      text-align: center;
+      padding-top: 100px;
+      font-size: 48px;
+      text-shadow: 2px 2px 4px #000;
+    }
+  </style>
+</head>
+<body>
+  <h1>Welcome to My Site</h1>
+</body>
+</html>
+
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -81,3 +110,4 @@
     </footer>
 </body>
 </html>
+
