--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       padding: 0;
-      background-image: url("images/banner.jpg"); /* ← yahan aapka image ka path hoga */
+      background-image: url("plain1.jpg"); /* ← yahan aapka image ka path hoga */
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
