--- a/index.html
+++ b/index.html
@@ -1,112 +1,125 @@
 <!DOCTYPE html>
 <html lang="hi">
-    <head>
-    <!DOCTYPE html>
-<html>
 <head>
-  <title>Meri Website</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>IT Service by [ak gautam jbs]</title>
   <style>
     body {
+      font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-image: url("plain1.jpg"); /* ← yahan aapka image ka path hoga */
+      background-image: url("plain1.jpg");
       background-size: cover;
       background-position: center;
       background-repeat: no-repeat;
-      height: 100vh;
+      color: #fff;
+      min-height: 100vh;
     }
 
-    h1 {
-      color: white;
+    header {
+      padding: 40px 20px 20px 40px;
+      text-align: left;
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    header h1 {
+      font-size: 36px;
+      margin: 0;
+      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.8);
+    }
+
+    header p {
+      margin-top: 10px;
+      font-size: 18px;
+      color: #ccc;
+    }
+
+    main {
+      max-width: 600px;
+      margin-left: 40px;
+      margin-top: 30px;
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.4); /* Light transparent background */
+      border-radius: 10px;
+    }
+
+    h2 {
+      color: #ffffff;
+      text-shadow: 1px 1px 4px #000;
+    }
+
+    ul {
+      list-style-type: square;
+      padding-left: 20px;
+    }
+
+    ul li {
+      margin-bottom: 8px;
+      font-size: 16px;
+      text-shadow: 1px 1px 2px #000;
+    }
+
+    .contact {
+      margin-top: 30px;
+    }
+
+    .contact a,
+    .contact p {
+      color: #fff;
+      font-size: 16px;
+      text-shadow: 1px 1px 2px #000;
+    }
+
+    a.phone-link {
+      color: #00f0ff;
+      font-weight: bold;
+      text-decoration: none;
+    }
+
+    a.phone-link:hover {
+      text-decoration: underline;
+    }
+
+    footer {
       text-align: center;
-      padding-top: 100px;
-      font-size: 48px;
-      text-shadow: 2px 2px 4px #000;
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.4);
+      color: #ccc;
+      font-size: 0.9em;
+      margin-top: 40px;
+      text-shadow: 1px 1px 2px #000;
     }
   </style>
 </head>
 <body>
-  <h1>Welcome to My Site</h1>
+  <header>
+    <h1>IT Support & Repair Services</h1>
+    <p>By [ak gautam jbs]</p>
+  </header>
+
+  <main>
+    <section>
+      <h2>IT Support</h2>
+      <ul>
+        <li>Computer And Laptop Repair</li>
+        <li>Internet Connection Problem Maintenance</li>
+        <li>Electronic Devices Ki Care And Repair</li>
+        <li>Network Setup And Maintenance</li>
+        <li>Software Installation And Problem Redressal</li>
+      </ul>
+    </section>
+
+    <section class="contact">
+      <h2>Contact Us</h2>
+      <p>You can call and message on this number:</p>
+      <p><a href="tel:+919759662377" class="phone-link">+91 9759662377</a></p>
+      <p>Email us: <a href="mailto:amitkumar975966@gmail.com" class="phone-link">amitkumar975966@gmail.com</a></p>
+    </section>
+  </main>
+
+  <footer>
+    &copy; 2025 [ak gautam jbs]. सभी अधिकार सुरक्षित।
+  </footer>
 </body>
 </html>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>IT Service by [ak gautam jbs]</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background: #f0f4f8;
-            color: #333;
-            margin: 0; padding: 0;
-        }
-        header {
-            background-color: #0078d7;
-            color: white;
-            padding: 20px;
-            text-align: center;
-        }
-        main {
-            max-width: 800px;
-            margin: 30px auto;
-            padding: 0 20px;
-        }
-        h1, h2 {
-            color: #0078d7;
-        }
-        .contact {
-            background: white;
-            padding: 15px;
-            margin-top: 40px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px #aaa;
-        }
-        footer {
-            text-align: center;
-            padding: 15px;
-            background: #eee;
-            margin-top: 50px;
-            font-size: 0.9em;
-            color: #666;
-        }
-        a.phone-link {
-            color: #0078d7;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        a.phone-link:hover {
-            text-decoration: underline;
-        }
-    </style>
-</head>
-<body>
-    <header>
-        <h1>IT Support & Repair Services</h1>
-        <p>By [ak gautam jbs]</p>
-    </header>
-
-    <main>
-        <section>
-            <h2>it support</h2>
-            <ul>
-                <li>Computer And Laptop Repair</li>
-                <li>Internat Connection Problem Maintenance</li>
-                <li>Electronic Devices Ki Care And Repair</li>
-                <li>Network Setup And Maintenance</li>
-                <li>Software Installation And Problemा  Redressal</li>
-            </ul>
-        </section>
-
-        <section class="contact">
-            <h2>Contact Us</h2>
-            <p>You can calland message on this number:</p>
-            <p><a href="tel:+919759662377" class="phone-link">+91 9759662377</a></p>
-            <p>Email us: <a href="mailto:.amitkumar975966@gmail.com">amitkumar975966@gmail.com</a></p>
-        </section>
-    </main>
-
-    <footer>
-        &copy; 2025 [ak gautam jbs]. सभी अधिकार सुरक्षित।
-    </footer>
-</body>
-</html>
-
