--- a/index.html
+++ b/index.html
@@ -123,3 +123,64 @@
   </footer>
 </body>
 </html>
+</about.page>
+<!DOCTYPE html>
+<html lang="hi">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>About Us - [ak gautam jbs]</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0; padding: 0;
+      background-image: url("plain1.jpg");
+      background-size: cover;
+      background-position: center;
+      color: white;
+    }
+    header {
+      background-color: rgba(0, 0, 0, 0.6);
+      padding: 20px 40px;
+      text-align: left;
+    }
+    nav a {
+      color: #00f0ff;
+      text-decoration: none;
+      margin-right: 20px;
+      font-weight: bold;
+    }
+    nav a:hover {
+      text-decoration: underline;
+    }
+    main {
+      max-width: 700px;
+      background-color: rgba(0,0,0,0.5);
+      margin: 40px auto;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px #000;
+    }
+    h1, h2 {
+      margin-top: 0;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>About Us</h1>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <h2>हमारे बारे में</h2>
+    <p>हम [ak gautam jbs] IT सपोर्ट और रिपेयर सेवाएँ प्रदान करते हैं। हमारा उद्देश्य ग्राहकों को उच्च गुणवत्ता की सेवाएँ देना है।</p>
+    <p>हमारी टीम अनुभवी और समर्पित है जो हर समस्या का समाधान जल्द से जल्द करती है।</p>
+  </main>
+</body>
+</html>
+
