--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
     <h1> Welcome my website IT Support & Repair Center</h1>
     <p>By [ak gautam jbs]</p>
   </header>
+<a href="login.html">Login</a>
 
   <main>
     <section>
