--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #background image;
+      background: image.background;
       color: #fff;
       display: flex;
       height: 100vh;
