--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: image.background;
+      background: url('images.bg.jpg') no-repeat center center fixed;
       color: #fff;
       display: flex;
       height: 100vh;
