--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: url('image') no-repeat center center fixed;
+      background-image: url('image');
       color: #fff;
       display: flex;
       height: 100vh;
