--- a/login.html
+++ b/login.html
@@ -7,7 +7,7 @@
   <style>
     body {
       font-family: Arial, sans-serif;
-      background-image: url('bg.jpg');
+      background-image: url('images/bg.jpg');
       color: #fff;
       display: flex;
       height: 100vh;
