--- a/login.html
+++ b/login.html
@@ -6,15 +6,18 @@
   <title>Login Page with Background Image</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-image: url('bg.jpg');
-      color: #fff;
-      display: flex;
-      height: 100vh;
-      justify-content: center;
-      align-items: center;
-      margin: 0;
-    }
+  font-family: Arial, sans-serif;
+  background-image: url('/bg.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  color: #fff;
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
     form {
       background: rgba(0,0,0,0.7);
       padding: 30px;
